TestSuite/errors/err0418.pas
//!Неверное количество параметров функции
function f(i: integer): boolean;
begin
  
end;
begin
  if f then
    exit;
end.